--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -7,29 +7,29 @@ ikea_stefan_side_left:
     # same side first
     assembly_points: # wrt base frame 
         # coordinates of pin holes
-      - [[0.431575428, 0.876060012, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-      - [[0.427121888, 0.844371434, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
+        # [ 0, 0, -0.0626337, 0.9980366 ]
+      - [[0.453, 0.875, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
+      - [[0.447, 0.841, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
+      - [[0.395, 0.569, -0.05],  [ 0, 0, -0.0938911, 0.9955825 ]]
+     
+      - [[0.366624, 0.413727, -0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
+      - [[0.365672, 0.380741, -0.05], [ 0, 0, -0.7071068, 0.7071068 ]]      
+
+      - [[0.0, 0.4265, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
+      - [[0.0, 0.3945, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]  
+      # - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
+      # - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]
       
-      - [[0.369042461, 0.40743307, -0.05], [0, 0, 0, 1]]
-      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
-      # - [[0.36736771, 0.375476925, -0.05], [0.7071068,-0.7071068,0,0]] #intern kim edited
-
-      - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
-      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
-      # - [[0.00049158, 0.394704088, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]  
-
         # coordinate of bolt holes        
-      - [[0.429348658, 0.860215723, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-      - [[0.368205086, 0.391454997, -0.05], [0, 0, 0, 1]]
-      - [[0.001328956, 0.41068216, -0.015], [0, 0, 0, 1]]
-      
-        # point to mate a zig
-      - [[-0.015, 0.00, 0.015], [0, 0, 0, 1]]
-      - [[0.434534042, 0.00, -0.02], [0, 0, 0, 1]]
+      - [[0.45, 0.858, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
 
-        # point to assembly a side_right
-      - [[0.429348658, 0.860215723, -0.4], [0, 0, -0.0626337, 0.9980366]]
+      # - [[0.373548, 0.389227, -0.05], [0, 0, 0, 1]]
+      - [[0.366548, 0.397227, -0.05], [0, 0, 0, 1]] ##num8
+
+      # - [[-0.005, 0.418, -0.01535], [ 0, 0, 0.0, 0.1 ]]
+      - [[0.0, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]]
+      # - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
+
     graspable_points: ikea_stefan_side_left_grasp.yaml
     graspable_lines: ikea_stefan_side_left_cont_grasp.yaml
 
@@ -41,33 +41,26 @@ ikea_stefan_side_right:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.431575428, 0.876060012, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
-      - [[0.427121888, 0.844371434, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
-      - [[0.393243934, 0.567390777, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.453, 0.875, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.447, 0.841, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.395, 0.569, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
       
-      - [[0.369042461, 0.40743307, 0.05], [1, 0, 0, 0]]
-      - [[0.36736771, 0.375476925, 0.05], [1, 0, 0, 0]]
+      - [[0.366624, 0.413727, 0.05], [1, 0, 0, 0]]
+      - [[0.365672, 0.380741, 0.05], [1, 0, 0, 0]]
       
-      - [[0.002166331, 0.426660233, 0.015], [1, 0, 0, 0]]
-      - [[0.00049158, 0.394704088, 0.015], [1, 0, 0, 0]]
+      - [[0.0, 0.4265, 0.01535], [1, 0, 0, 0]]
+      - [[0.0, 0.3945, 0.01535], [1, 0, 0, 0]]
       
-        # coordinate of bolt holes        
-      - [[0.429348658, 0.860215723, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
-#      - [[0.368205086, 0.391454997, 0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
-      - [[0.368205086, 0.391454997, 0.15], [ 0, 0, 1, 0 ]]
-#      - [[0.001328956, 0.41068216, 0.015], [ 0, 0, -0.7071068, 0.7071068 ]]
-      - [[0.001328956, 0.41068216, -0.015], [ 0, 0, 0.707107, 0.707107 ]]
+        # coordinate of bolt holes which are NOT MODIFIED!!!
+      - [[0.45, 0.858, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
+      # - [[0.366548, 0.397227, 0.05], [ 0, 0, 1, 0 ]]
+      - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.3826834, 0.9238795 ]]      
+      - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.707107, 0.707107 ]]
       
-        # point to mate a zig
-      - [[-0.015, 0.00, -0.015], [0, 0, 0, 1]]
-      - [[0.434534042, 0.00, 0.02], [0, 0, 0, 1]]
-
-        # base
-      - [[-0.00, 0.00, -0.0], [0, 0, 0, 1]]
+      # - [[0.45, 0.858, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
+      # - [[0.373548, 0.389227, 0.05], [ 0, 0, 1, 0 ]]
+      # - [[-0.005, 0.418, -0.01535], [ 0, 0, -0.707107, 0.707107 ]]
       
-      # top
-      - [[-0.434820213, 0.898486347, 0.035], [-0.7053843, 0.0493253, -0.0493253, 0.7053843]]
-
     graspable_points: ikea_stefan_side_right_grasp.yaml
     graspable_lines: ikea_stefan_side_right_cont_grasp.yaml
          
@@ -78,25 +71,26 @@ ikea_stefan_long:
     model_file: ikea_stefan_long.stl
     tf_visible: true
     assembly_points:
-        # coordinates of pin holes
-      - [[0.17, 0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
-      - [[0.17, -0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
-      - [[-0.17, 0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
-      - [[-0.17, -0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
+        #coordinates of pin holes
+      # - [[0.17, 0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
+      # - [[0.17, -0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
+      # - [[-0.17, 0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
+      # - [[-0.17, -0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
+      - [[0.17, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]      
+      - [[0.17, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+      - [[-0.17, 0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+      - [[-0.17, -0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+      
+        #coordinates of bracket holes
+      - [[0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
+      - [[-0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
         
-        # coordinates of bracket holes
-      - [[0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
-      - [[-0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
-        
-        # coordinates of bolt holes
+        #coordinates of bolt holes
       - [[0.17, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
       - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-        
-        # point to mate a zig
-      - [[-0.17, 0.025, 0.0], [0, 0, 0, 1]]
-      
     graspable_points: ikea_stefan_long_grasp.yaml
     graspable_lines: ikea_stefan_long_cont_grasp.yaml
+    surface_center: ikea_stefan_long_assemble_surface.yaml
          
 ikea_stefan_short:
     class_id: 4
@@ -106,23 +100,26 @@ ikea_stefan_short:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.135, 0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
-      - [[0.135, -0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
-      - [[-0.135, 0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
-      - [[-0.135, -0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
-        
+      # - [[0.135, 0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
+      # - [[0.135, -0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
+      # - [[-0.135, 0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
+      # - [[-0.135, -0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
+      - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+      - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+      - [[-0.135, 0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+      - [[-0.135, -0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+
         # coordinates of bracket holes
-      - [[0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
-      - [[-0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
+      - [[0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
+      - [[-0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
         
         # coordinates of bolt holes
       - [[0.135, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
       - [[-0.135, 0.0, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
-        
-        # point to mate a zig
-      - [[-0.135, 0.025, 0.0], [0, 0, 0, 1]]
+
     graspable_points: ikea_stefan_short_grasp.yaml
     graspable_lines: ikea_stefan_short_cont_grasp.yaml
+    surface_center: ikea_stefan_short_assemble_surface.yaml
          
 ikea_stefan_middle:
      class_id: 5
@@ -132,13 +129,16 @@ ikea_stefan_middle:
      tf_visible: true
      assembly_points:
          # coordinates of pin holes
-       - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-       - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-       - [[0.135, -0.295, 0.005], [-0.7071068, 0.0, 0.7071068, 0.0]] #[-0.5, -0.5, 0.5, 0.5]]
+      #  - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+      #  - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+       - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+       - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+       - [[0.135, -0.295, 0.005], [ -0.7071068, 0, 0.7071068, 0 ]]
+      #  - [[0.135, -0.295, 0.005], [ -0.7057122, -0.0443882, 0.7057122, 0.0443882 ]]
+      
        - [[-0.135, 0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
        - [[-0.135, -0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
-       - [[-0.135, -0.295, 0.005], [0, 0.7071068, 0, 0.7071068]]
-      
+       - [[-0.135, -0.295, 0.005], [0, 0.7071068, 0, 0.7071068]]      
          # coordinates of bolt holes
        - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
        - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
@@ -148,23 +148,37 @@ ikea_stefan_middle:
 
      graspable_points: ikea_stefan_middle_grasp.yaml
      graspable_lines: ikea_stefan_middle_cont_grasp.yaml
+     surface_center: ikea_stefan_middle_assemble_surface.yaml
          
-# ikea_stefan_bottom:
+ikea_stefan_bottom:
+    class_id: 6
+    type: furniture_part
+    quantity: 1
+    model_file: ikea_stefan_bottom.stl
+    tf_visible: true
+    assembly_points:
+        # coordinates of pin holes
+      - [[0, 0.205, 0], [ 0.7071068, 0, 0, 0.7071068]]
+      
+        # point to mate a zig
+      - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
+      
+    graspable_points: ikea_stefan_bottom_grasp.yaml
+    graspable_lines: ikea_stefan_bottom_cont_grasp.yaml
+
+# ikea_stefan_bolt_side:
 #     class_id: 6
-#     type: furniture_part
+#     type: connector
 #     quantity: 1
-#     model_file: ikea_stefan_bottom.stl
+#     model_file: ikea_stefan_bolt_side.stl
 #     tf_visible: true
 #     assembly_points:
-#         # coordinates of pin holes
-#       - [[0, 0.205, 0], [ 0.7071068, 0, 0, 0.7071068]]
-      
-#         # point to mate a zig
-#       - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
-      
-#     graspable_points: ikea_stefan_bottom_grasp.yaml
-#     graspable_lines: ikea_stefan_bottom_cont_grasp.yaml
-         
+#         # coordinates of tip
+#       - [[0, 0.0, 0.2], [ 0.0, 0, 0, 1.0]]
+
+# #    graspable_points: ikea_stefan_bottom_grasp.yaml
+#     graspable_lines: ikea_ikea_stefan_bolt_side_cont_grasp.yaml
+
 # chair_bracket:
 #   class_id: 1
 #   type: connector
