--- a/models/grasps/ikea_ikea_stefan_bolt_side_cont_grasp.yaml
+++ b/models/grasps/ikea_ikea_stefan_bolt_side_cont_grasp.yaml
@@ -1,11 +1,12 @@
 grasp_points: 
-    - lower_bound:    [0.0, 0.0, 0.00]
-      upper_bound:    [0.0, 0.0, 0.00]
-      orientation:    [0, 0, 0, 1]
-      # orientation:    [0, 0, 0.707, 0.707]
+    - lower_bound:    [-0.02, 0.00, 0.00]
+      upper_bound:    [-0.02, 0.00, 0.00]
+      # orientation:    [0, 0.707107, 0, 0.707107]
+      orientation:    [ 0.5, -0.5, 0.5, -0.5 ]
       distance:       0.0
-    - lower_bound:    [0.0, 0.0, 0.07]
-      upper_bound:    [0.0, 0.0, 0.07]
-      orientation:    [1, 0, 0, 0]
-      # orientation:    [0.707, -0.707, 0, 0]
-      distance:       0.0
+    # - lower_bound:    [0.0, 0.0, 0.07]
+    #   upper_bound:    [0.0, 0.0, 0.07]
+    #   #orientation:    [1, 0, 0, 0]
+    #   orientation:    [0, 0.707107, 0, 0.707107]
+    #   # orientation:    [0.707, -0.707, 0, 0]
+    #   distance:       0.0
