--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -193,9 +193,12 @@ ikea_stefan_without_bottom:
     assembly_points:      
       # coordinate of bolt holes        
       - [[0.45, 0.858, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
-      - [[0.362, 0.40450, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8   backup [[0.366548, 0.397227, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8
-      - [[0.0, 0.41050, 0.01535], [ 0.7071068, 0.7071068, 0, 0 ] ] #[ 0, 0, 0.9238795, 0.3826834 ] ] #[ 0, 0, 0.0, 0.1 ]]
+      # - [[0.362, 0.40450, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8   backup [[0.366548, 0.397227, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8
+      - [[0.362, 0.40450, -0.01535], [ 0.7071068, 0.7071068, 0, 0 ]] 
       
+      # - [[0.0, 0.41050, 0.01535], [ 0.7071068, 0.7071068, 0, 0 ] ] #[ 0, 0, 0.9238795, 0.3826834 ] ] #[ 0, 0, 0.0, 0.1 ]]
+      - [[0.000, 0.41050, 0.023], [ 0.9659249, 0.2588223, 0, 0 ]]
+
       # bolt hole on the side_right
       # TODO : change the position along z-axis
       # - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]] # original value
@@ -205,7 +208,7 @@ ikea_stefan_without_bottom:
       # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       
-    
+      
       # bracket 16cm,33mm
       - [[0.3289, 0.4236, -0.2789], [ 0, 0.7071068, 0.7071068, 0 ]]
       - [[0.3289, 0.4236, -0.1190], [ 0, 0.7071068, 0.7071068, 0 ]]
