--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -89,9 +89,10 @@ ikea_stefan_long:
         
         #coordinates of bolt holes
       - [[0.17, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      # - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      - [[-0.17, 0.0, 0.01], [-0.7071, 0.0062,  -0.7071, 0.0062]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      # - [[-0.17, 0.0, 0.01], [ -0.7069385, -0.0154255, -0.7069385, -0.0154255 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      # - [[-0.17, 0.0, 0.01], [ -0.7071068, 0, -0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      # - [[-0.17, 0.0, 0.01], [ -0.7071068, 0, -0.7071068, 0 ]] # which one is right????
+      - [[-0.17, 0.0, 0.01], [-0.7070, 0.0123,  -0.7070, 0.0123]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      
     
     graspable_points: ikea_stefan_long_grasp.yaml
     graspable_lines: ikea_stefan_long_cont_grasp.yaml
@@ -198,11 +199,13 @@ ikea_stefan_without_bottom:
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       
       
-      # bracket 16cm,33mm
-      - [[0.3289, 0.4236, -0.2789], [ 0, 0.7071068, 0.7071068, 0 ]]
-      - [[0.3289, 0.4236, -0.1190], [ 0, 0.7071068, 0.7071068, 0 ]]
-      - [[0.0171, 0.4254, -0.0858], [ -0.7071068, 0, 0, 0.7071068 ]]
-      - [[0.0171, 0.4254, -0.3119], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.3439, 0.4236, -0.2805], [ 0, 0.7071068, 0.7071068, 0 ]]
+      - [[0.3439, 0.4236, -0.1190], [ 0, 0.7071068, 0.7071068, 0 ]]
+      # - [[0.0171, 0.4254, -0.0858], [ -0.7071068, 0, 0, 0.7071068 ]]
+      # - [[0.0171, 0.4254, -0.3119], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.03, 0.4254, -0.0865], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.03, 0.4254, -0.3102], [ -0.7071068, 0, 0, 0.7071068 ]]
+
 
     graspable_points: ikea_stefan_assembled_jy_grasp.yaml
     graspable_lines: ikea_stefan_without_bottom_cont_grasp.yaml
